# imagepdf_converter

./: .env.example  .gitignore  Dockerfile  INSTALL_GUIDE.md  README.md  build_installer.bat  build_installer.sh  run_cli.py  run_server.py  setup.py  vercel.json
backend/: requirements-gpu.txt  requirements.txt  server.py
backend/core/: __init__.py  block_integrity.py  correction.py  digital_pdf_extractor.py  gemini_client.py  gemini_html_refiner.py  hancom_converter.py  heading_classifier.py  html_renderer.py  image_extractor.py  layout_detector.py  libreoffice_converter.py  llm_corrector.py  md_renderer.py  merger.py  ocr_confusion.py  ocr_engine.py  page_renderer.py  pdf2html_renderer.py  pdf_splitter.py  pipeline.py  reading_order.py  table_recognizer.py  (+3 more)
build_scripts/: build_windows.bat
config/: correction_dict.json  pipeline_config.yaml
electron/: package.json
homepage/: index.html  nginx.conf  payment-fail.html  payment-success.html  script.js  styles.css
mobile/: capacitor.config.json  index.html  package.json
patent/: patent_application_KR.md
src/: editor.html  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/backend/: process.rs
src-tauri/src/commands/: backend_cmd.rs  common.rs  config.rs  conversion.rs  credit_cmd.rs  document_cmd.rs  file_ops.rs  moa_cmd.rs  mod.rs
src-tauri/src/document/: converter.rs  docx.rs  hwpx.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src-tauri/src/moa/: gateway.rs
supabase/: schema.sql
(+20 files in other folders)
