[package]
name = "pdf-converter"
version = "1.0.0"
edition = "2021"
description = "PDF/문서 변환기 - MoA 문서 도구"
authors = ["zeroclaw"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
calamine = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
portpicker = "0.1"
regex = "1"
html-escape = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
